# slstatus

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  config.h  config.mk  slstatus.c  slstatus.h  util.h
components/: battery.c  disk.c  file_message.c  keymap.c  lm_sensors.c  load_avg.c  net.c  netspeeds.c  nvml.c  nvml.h  pa.c  wifi.c  xnvctrl.c
